@@ -125,8 +125,10 @@ func extractInt(unk interface{}) (uint64, error) {
 func extractString(unk interface{}) (string, error) {
 	switch s := unk.(type) {
 	case string:
-		return string(s), nil
+		return s, nil
+	case *string:
+		return *s, nil
 	default:
-		return "", fmt.Errorf("unkown type %T passed to extractString", unk)
+		return "", fmt.Errorf("unknown type %T passed to extractString", unk)
 	}
 }
